Resolves: fdo#71309 Export SWF with Multiple files crashes

In case of unamed file, creation of sPresentationName crash.
This patch forces creation of empty name

Change-Id: I1b5319eb945f1959f2ad3c703365539508521861
Reviewed-on: https://gerrit.libreoffice.org/6598
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 2cf96ae334491733a2bdbeb003da6e49df19cc9f)